
2018-07-29  Ron Norman <rjn@inglenet.com>
	* config.def: Added 'cb_occurs_max_length_without_subscript'
	* typeck.c: Checks cb_occurs_max_length_without_subscript for 
	           ACU Cobol variation on computing LENGTH OF occurs-fld
			   when no subscript is provided

2018-07-12  Ron Norman <rjn@inglenet.com>
	* parser.y: Set CB_CALL_BY_CONTENT for literal parameters
	* codegen.c: Make copy of fields for BY CONTENT & BY VALUE

2018-07-05  Ron Norman <rjn@inglenet.com>
	* config.def: Added 'depending-on-not-fixed'
	* codegen.c,tree.h: Made 'chk_field_variable_size' extern
	* typeck.c: Added code for 'depending-on-not-fixed'
	 which checks if a DEPENDING ON field is in a fixed location

2018-07-05  Ron Norman <rjn@inglenet.com>
	* parser.y,scanner.l: Removed LENGTH_OF as it is no longer used

2018-07-04  Ron Norman <rjn@inglenet.com>
	* parser.y: Accept both LENGTH and LENGTH OF in all places

2018-07-04  Ron Norman <rjn@inglenet.com>
	* codegen.c: Fixed 'output_size' to compute size of OCCURS DEPENDING
	          for -fodoslide as well as when the field is BASED or 
			  is in LINKAGE SECTION
	* typeck.c: If destination of a MOVE is variable_size 
	   and there is no reference mod (or start position is 1) 
	   and the field is BASED or in LINKAGE SECTION
	   then emit code to MOVE fixed size header of field first as it
	   may be holding the DEPENDING ON fields/values 
	   and then do a complete MOVE.
	   If the field is NOT BASED and NOT LINKAGE 
	   then MOVE for the maximum size of the destination field

2018-06-28  Ron Norman <rjn@inglenet.com>
	* typeck.c: Check properly formed 'Abbreviated conditional expressions'

2018-06-24  Ron Norman <rjn@inglenet.com>
	* typeck.c: If destination of a MOVE is variable_size handle
	   starting position that is more than 1 and less than fixed
	   header of an ODO field

2018-06-24  Ron Norman <rjn@inglenet.com>
	* codegen.c: Fixed 'output_size' to adjust size by starting offset