@@ -49,6 +49,7 @@ CB_CONFIG_BOOLEAN (cb_accept_auto, "accept-auto")
 CB_CONFIG_BOOLEAN (cb_select_working, "select-working")
 CB_CONFIG_BOOLEAN (cb_move_non_numeric_lit_to_numeric_is_zero, "move-non-numeric-lit-to-numeric-is-zero")
 CB_CONFIG_BOOLEAN (cb_occurs_max_length_without_subscript, "occurs-max-length-without-subscript")
+CB_CONFIG_BOOLEAN (cb_length_in_data_division, "length-in-data-division")
 CB_CONFIG_SUPPORT (cb_move_figurative_constant_to_numeric, "move-figurative-constant-to-numeric")
 CB_CONFIG_SUPPORT (cb_comment_paragraphs, "comment-paragraphs")
 CB_CONFIG_SUPPORT (cb_memory_size_clause, "memory-size-clause")
