@@ -147,6 +147,9 @@ accept-auto:		no
 # If no, LENGTH OF occurs-fld is computed as just size of field
 occurs-max-length-without-subscript: no
 
+# Is LENGTH OF allows in DATA DIVISION
+length-in-data-division: yes
+
 # not-reserved:
 # Value: Word to be taken out of the reserved words list
 # (case independent)
