@@ -402,6 +402,7 @@ test.conf: Missing definitions
 	No definition of 'select-working'
 	No definition of 'move-non-numeric-lit-to-numeric-is-zero'
 	No definition of 'occurs-max-length-without-subscript'
+	No definition of 'length-in-data-division'
 	No definition of 'move-figurative-constant-to-numeric'
 	No definition of 'comment-paragraphs'
 	No definition of 'memory-size-clause'
