@@ -2385,3 +2385,69 @@ AT_CHECK([cobc -x -std=default -w prog.cob ], [0], [],
 
 AT_CLEANUP
 
+AT_SETUP([IBM Data Division])
+AT_KEYWORDS([78 LENGTH])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog.
+       ENVIRONMENT DIVISION.
+       CONFIGURATION SECTION.
+       DATA  DIVISION.
+       WORKING-STORAGE SECTION.
+
+       01 DATA-SIZE  PIC 999.
+       01 MY-DATA.
+          03 MY-TABLE OCCURS 20 TIMES.
+             05 MY-ELEMENT-1  PIC X(10).
+             05 MY-ELEMENT-2  PIC 99.
+       78 MY-LEN VALUE LENGTH OF MY-DATA.
+
+       01 TBLX       PIC 99 VALUE 5.
+       01 ODO-DATA.
+          03 ODO-TABLE OCCURS 1 TO 15 TIMES DEPENDING ON TBLX.
+             05 ODO-ELEMENT-1 PIC X(10).
+             05 ODO-ELEMENT-2 PIC 99.
+       78 ODO-LEN VALUE LENGTH OF ODO-DATA.
+
+       PROCEDURE DIVISION.
+           DISPLAY "MY-LEN       is " MY-LEN.
+           DISPLAY "ODO-LEN      is " ODO-LEN.
+           MOVE LENGTH OF MY-DATA TO DATA-SIZE.
+           DISPLAY "MY-DATA      is " FUNCTION LENGTH (MY-DATA)
+                   " and " DATA-SIZE.
+           MOVE LENGTH OF MY-ELEMENT-1 TO DATA-SIZE.
+           DISPLAY "MY-ELEMENT-1 is " FUNCTION LENGTH (MY-ELEMENT-1)
+                   " and " DATA-SIZE.
+           MOVE LENGTH OF MY-TABLE TO DATA-SIZE.
+           DISPLAY "MY-TABLE     is " LENGTH OF MY-TABLE
+                   " and " DATA-SIZE.
+           MOVE LENGTH OF MY-TABLE(1) TO DATA-SIZE.
+           DISPLAY "MY-TABLE(1)  is " FUNCTION LENGTH (MY-TABLE(1))
+                   " and " DATA-SIZE.
+
+           MOVE LENGTH OF ODO-DATA TO DATA-SIZE.
+           DISPLAY "ODO-DATA a   is " FUNCTION LENGTH (ODO-DATA)
+                   " and " DATA-SIZE.
+           MOVE FUNCTION LENGTH (ODO-DATA) TO DATA-SIZE.
+           DISPLAY "ODO-DATA b   is " LENGTH OF ODO-DATA
+                   " and " DATA-SIZE.
+           MOVE LENGTH OF ODO-TABLE TO DATA-SIZE.
+           DISPLAY "ODO-TABLE    is " LENGTH OF ODO-TABLE
+                   " and " DATA-SIZE.
+           MOVE LENGTH OF ODO-TABLE(1) TO DATA-SIZE.
+           DISPLAY "ODO-TABLE(1) is " FUNCTION LENGTH (ODO-TABLE(1))
+                   " and " DATA-SIZE.
+           STOP RUN.
+])
+
+AT_CHECK([cobc -x -std=ibm -w prog.cob ], [1], [],
+[prog.cob: 14: Error: LENGTH OF 'MY-DATA' not allowed outside of Procedure Division
+prog.cob: 14: Error: 78 VALUE used
+prog.cob: 21: Error: LENGTH OF 'ODO-DATA' not allowed outside of Procedure Division
+prog.cob: 21: Error: 78 VALUE used
+prog.cob: 30: Error: 'MY-ELEMENT-1' requires 1 subscript
+])
+
+AT_CLEANUP
+
